# tester

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/: __main__.py  tester.py
src/tester/: __init__.py  tester.py
